@@ -1,6 +1,7 @@
 git-annex (0.04) UNRELEASED; urgency=low
 
   * Add build dep on libghc6-testpack-dev.
+  * Add annex.version, which will be used to automate upgrades.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 08 Nov 2010 12:36:39 -0400
 
